package aktual.account.ui.login

internal object Tags {
  const val PasswordLoginTextField = "PasswordLogin:text"
  const val PasswordLoginButton = "PasswordLogin:button"
  const val LoginFailureText = "LoginFailure:text"
}
