package aktual.account.ui.login

import aktual.account.vm.LoginRequester
import aktual.account.vm.LoginResult
import aktual.account.vm.LoginViewModel
import aktual.core.model.AktualVersionsStateHolder
import aktual.core.model.Password
import aktual.core.model.Token
import aktual.core.nav.BackNavigator
import aktual.core.nav.ListBudgetsNavigator
import aktual.core.nav.ServerUrlNavigator
import aktual.prefs.AppPreferences
import aktual.prefs.AppPreferencesImpl
import aktual.test.TestBuildConfig
import aktual.test.assertEditableTextEquals
import aktual.test.buildPreferences
import aktual.test.runTest
import aktual.test.setAndroidThemedContent
import androidx.compose.ui.test.assertIsEnabled
import androidx.compose.ui.test.assertTextEquals
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.junit4.v2.createComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performImeAction
import androidx.compose.ui.test.performTextInput
import assertk.assertThat
import assertk.assertions.isFalse
import assertk.assertions.isTrue
import io.mockk.coEvery
import io.mockk.coVerify
import io.mockk.every
import io.mockk.mockk
import kotlin.test.BeforeTest
import kotlin.test.Test
import kotlinx.coroutines.test.TestScope
import kotlinx.coroutines.test.UnconfinedTestDispatcher
import org.junit.Rule
import org.junit.runner.RunWith
import org.robolectric.RobolectricTestRunner
import org.robolectric.shadows.ShadowLog

@RunWith(RobolectricTestRunner::class)
class LoginScreenTest {
  @get:Rule val composeRule = createComposeRule()

  // real
  private lateinit var viewModel: LoginViewModel
  private lateinit var versionsStateHolder: AktualVersionsStateHolder
  private lateinit var preferences: AppPreferences

  // mock
  private lateinit var loginRequester: LoginRequester
  private lateinit var serverUrlNavigator: ServerUrlNavigator
  private lateinit var listBudgetsNavigator: ListBudgetsNavigator
  private var toBudgetListCalled = false
  private var toServerUrlCalled = false

  @BeforeTest
  fun before() {
    ShadowLog.stream = System.out

    toBudgetListCalled = false
    toServerUrlCalled = false
    loginRequester = mockk { coEvery { fetchLoginMethods() } returns emptyList() }
    setLoginResult { LoginResult.Success(TOKEN) }

    serverUrlNavigator =
      mockk<ServerUrlNavigator> {
        every { this@mockk.invoke() } answers { toServerUrlCalled = true }
      }

    listBudgetsNavigator =
      mockk<ListBudgetsNavigator> {
        every { this@mockk.invoke() } answers { toBudgetListCalled = true }
      }

    versionsStateHolder = AktualVersionsStateHolder(BUILD_CONFIG)
    val scope = TestScope(UnconfinedTestDispatcher())
    val prefs = scope.buildPreferences()
    preferences = AppPreferencesImpl(prefs)
  }

  private fun buildViewModel(password: Password = Empty) {
    viewModel =
      LoginViewModel(
        loginRequester = loginRequester,
        versionsStateHolder = versionsStateHolder,
        preferences = preferences,
        buildConfig = TestBuildConfig.copy(defaultPassword = password),
      )
  }

  @Test
  fun `Login success`() = composeRule.runTest {
    // given initial state with empty password
    buildViewModel(password = Empty)
    setAndroidThemedContent {
      LoginScreen(
        back = BackNavigator(mockk(relaxed = true)),
        toServerUrl = serverUrlNavigator,
        toListBudgets = listBudgetsNavigator,
        viewModel = viewModel,
      )
    }

    // and the login takes half a second before succeeding
    setLoginResult {
      preferences.token.set(TOKEN) // to trigger nav behaviour
      LoginResult.Success(TOKEN)
    }

    // then then text is empty
    onNodeWithTag(Tags.PasswordLoginTextField).assertIsEnabled().assertEditableTextEquals("")

    // and the login button is disabled
    onNodeWithTag(Tags.PasswordLoginButton, useUnmergedTree = true).performClick()
    runOnIdle { coVerify(exactly = 0) { loginRequester.logIn(any()) } }

    // when we enter a password
    onNodeWithTag(Tags.PasswordLoginTextField).performTextInput(PASSWORD.value)

    // and hit enter on the keyboard, with hidden password text visible
    onNodeWithTag(Tags.PasswordLoginTextField)
      .assertEditableTextEquals("•••••••••")
      .performImeAction()

    runOnIdle {
      // then the login was triggered
      coVerify(exactly = 1) { loginRequester.logIn(PASSWORD, any()) }

      // and the navigation was triggered when it succeeded
      assertThat(toBudgetListCalled).isTrue()
    }
  }

  @Test
  fun `Login failure`() = composeRule.runTest {
    // given initial state with dummy password
    buildViewModel(password = PASSWORD)
    setAndroidThemedContent {
      LoginScreen(
        back = BackNavigator(mockk(relaxed = true)),
        toServerUrl = serverUrlNavigator,
        toListBudgets = listBudgetsNavigator,
        viewModel = viewModel,
      )
    }

    // and the login takes half a second before failing
    setLoginResult { LoginResult.HttpFailure(code = 404, message = "It failed") }

    // When we hit enter on the keyboard, with hidden password text visible
    onNodeWithTag(Tags.PasswordLoginTextField)
      .assertEditableTextEquals("•••••••••")
      .performImeAction()

    runOnIdle {
      // then the login was triggered
      coVerify(exactly = 1) { loginRequester.logIn(PASSWORD, any()) }

      // and the navigation was not triggered
      assertThat(toBudgetListCalled).isFalse()
    }

    // and the login failure text is visible
    waitUntilExactlyOneExists(hasTestTag(Tags.LoginFailureText))
    onNodeWithTag(Tags.LoginFailureText).assertTextEquals("Server error 404: It failed")
  }

  private fun setLoginResult(block: suspend () -> LoginResult) {
    coEvery { loginRequester.logIn(any(), any()) } coAnswers { block() }
  }

  private companion object {
    val PASSWORD = Password("P@ssw0rd!")
    val TOKEN = Token("abc-123")

    val BUILD_CONFIG = TestBuildConfig.copy(versionName = "1.2.3", versionCode = 123)
  }
}
